[package]
name = "actix_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.0.4"
actix-web = "4.0.1"
env_logger = "0.9"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
json = "0.12"
log = "0.4"
pin-project = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
