[package]
name = "actix_data"
version = "0.1.0"
edition = "2021"
authors = ["davidskyberg@gmail.com"]
description = "Handle payload in actix middleware"
keywords = ["actix", "middleware", "payload", "request", "body", "Service"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "^3"
actix-web = "^4"
env_logger = "^0.10"
futures-util = { version = "^0.3", default-features = false, features = [
    "std",
] }
log = "^0.4"
pin-project = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
